# N-Space_NumberSysLib

./: .clang-format  CMakeLists.txt  Makefile  main
include/hypercomplex/: complex.hpp  octonion.hpp  quaternion.hpp  sedenion.hpp  trigintaduonion.hpp
src/: main.cpp
tests/: complex_tests.cpp
